--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,13 @@ lxml_html_clean==0.3.1
 markdown==3.7
 mcp==1.9.0
 newspaper3k==0.2.8
+numpy==1.26.4
 paramiko==3.5.0
 playwright==1.52.0
 pypdf==4.3.1
 python-dotenv==1.1.0
 pytz==2024.2
+scikit-learn==1.4.1.post1
 sentence-transformers==3.0.1
 tiktoken==0.8.0
 unstructured==0.15.13
